Featured In spacing corrected

--- a/app/styles/home-view.sass
+++ b/app/styles/home-view.sass
@@ -413,7 +413,7 @@
       .row
         padding: 0
       h2
-        padding-top: 40px
+        padding-top: 22px
       @media (min-width: $screen-lg-min)
         background: linear-gradient(90deg, #F7F9F9 25%, #EAEEEE 25%)
       // Hack to prevent footer from creating a white space with its margin.
@@ -426,12 +426,17 @@
         @media (min-width: $screen-lg-min)
           background: linear-gradient(90deg, #F7F9F9 40%, #EAEEEE 40%)
       .pink-bar
-        padding-bottom: 20px
+        padding-bottom: 35px
+        margin-top: -20px
+        
       @media (min-width: $screen-xs-min)
         .tile-row
           display: inline-block
       .featured-section, .partners-section
         padding-bottom: 40px
+      .partners-section
+        .col-sm-12 a img
+          margin-top: -22px
       .tile-shadow
         background-color: #FFFFFF
         box-shadow: 2px 2px 6px 0 rgba(155,155,155,0.51)
@@ -492,8 +497,9 @@
           color: #9B9B9B
           font-family: $body-font
           font-size: 14px
+          font-weight: 200
           letter-spacing: 0.58px
           line-height: 19px
           position: absolute
-          bottom: 6px
+          top: 145px
           width: 100%
